kubernetes/gray/canary/canary-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: canary
  namespace: gray
  annotations:
    kubernetes.io/ingress.class: nginx
    # 这里必须加这条，表示当前ingress是灰度的ingress
    nginx.ingress.kubernetes.io/canary: "true"
    # 优先顺序 canary-by-header - > canary-by-cookie - > canary-weight
    # 这里的值可以改成任意值, 和后面的请求header对应
    nginx.ingress.kubernetes.io/canary-by-header: gray
    # 该规则允许用户自定义 Request Header 的值, 不加的话，默认就是always和never两个值, 表示始终进灰度或不进入灰度。
    # nginx.ingress.kubernetes.io/canary-by-header-value: "true"
    # for i in $(seq 1 100); do curl -s -H "gray:true" test.lo.com | grep "Hostname"; done | grep -c canary
    nginx.ingress.kubernetes.io/canary-weight: "80"
spec:
  tls:
  - hosts:
    - test.i.com
    secretName: i-com
  rules:
  - host: test.i.com
    http:
      paths:
      - backend:
          serviceName: canary
          servicePort: 80
